css/default: Update gist style
Signed-off-by: Kim In Seop <opnayn@gmail.com>

--- a/css/default.css
+++ b/css/default.css
@@ -62,8 +62,9 @@ article video {width:100%; height:auto;}
 article audio {padding:0 24px; width:calc(100% - 48px);}
 
 /* Gist */
-.gist-file {border:none;}
-.gist-data {border-top:1px solid #ddd; border-bottom:1px solid #ddd;}
+article .gist .gist-file {border:none;}
+article .gist .gist-data {border-top:1px solid #ddd; border-bottom:1px solid #ddd;}
+article .gist .gist-meta {border-bottom:1px solid #ddd;}
 
 /*
  * Class
