_layouts/lists: Add thumbnail style
Signed-off-by: Kim In Seop <opnayn@gmail.com>

--- a/_layouts/lists.html
+++ b/_layouts/lists.html
@@ -27,6 +27,8 @@ layout: "base"
     .toolbar .title {padding:0 64px; font-size:24px; line-height:64px; text-align:center;}
     .list .item {display:block; padding:16px;}
     .list .item:hover {background:rgba(0,0,0,0.1); text-decoration:none;}
+    .list .item-thumb {margin-right:12px; border-radius:50%; width:94px; vertical-align:middle;}
+    .list .item-info {display:inline-block; width:calc(100% - 112px); vertical-align:middle;}
     .list .title {margin:0 0 8px; font-size:18px;}
     .list .desc {margin:0; font-size:14px; max-height:2.4rem; line-height:1.2rem; overflow:hidden;}
 </style>
