--- a/_includes/html/head.html
+++ b/_includes/html/head.html
@@ -2,6 +2,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
 <link rel="alternate" type="application/rss+xml" title="OPNay RSS" href="/feed.xml">
+<link rel="canonical" href="{{ site.url }}{{ page.url }}">
 <title>{{ page.title }}</title>
 
 <!-- favicon -->
