Cleanup - Remove `meta http-equiv="Content-Type"`   - Don't use in html5, use `meta charset="utf-8"` - Remove "/" in single tag(like img, meta) - Remove `type="text/javascript"`   - The type attribute is unnecessary for JavaScript resources. - Add alt for img tag - Cleanup some wrong tags
Signed-off-by: Kim In Seop <opnayn@gmail.com>

--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -42,7 +42,7 @@
 	</head>
 	<body>
 		{% include loading.html %}
-		<script type="text/javascript" defer src="/js/window.resize.js"></script>
+		<script defer src="/js/window.resize.js"></script>
 		{% if page.img_background %}{% include img_back.html %}{% endif %}
 		{{ content }}
 	</body>
