_layouts/blog: ".post-header .info" set font size as default
Signed-off-by: Kim In Seop <opnayn@gmail.com>

--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -73,7 +73,7 @@ layout: "base"
 .content {padding:0 32px 32px; min-height:calc(100% - 256px);}
 .content .post-header {padding:16px 24px;}
 .content .post-header .title {margin:0 0 8px;}
-.content .post-header .info {margin:0 0 12px; font-size:0.8rem;}
+.content .post-header .info {margin:0 0 12px;}
 
 #page_adsense {padding:16px 24px; text-align:center;}
 #disqus_thread {padding:16px 24px; }
