--- a/_includes/loading.html
+++ b/_includes/loading.html
@@ -1,10 +1,9 @@
 <!-- Loading -->
-<script>(function(a){"use strict";var d=function(d){return a("<div>",{class:d})};a("body").append(d("loader-bg bg-p").append(d("loader-wrap").append(d("loader"))));window.onload=function(){a(".loader-bg").addClass("done")}})(jQuery);</script>
+<script>var d=function(e){let d=document.createElement("div");return d.className=e,d};let tp=d("loader");tp2=d("loader-bg bg-p"),tp2.appendChild(tp),document.body.appendChild(tp2),window.addEventListener("load",function(){tp2.className+=" done"});</script>
 <style>
 .loader-bg {z-index:200; position:fixed; width:100%; height:100%; top:0; left:0;}
-.loader-wrap {position:absolute; top:50%; left:50%; transform:translate(-50%, -50%);}
-.loader{border: 2rem solid #f3f3f3; border-radius: 50%; width:2rem; height:2rem; animation:spin .5s linear infinite;}
+.loader{position:absolute; top:50%; left:50%; border:2rem solid #f3f3f3; border-radius: 50%; width:2rem; height:2rem; animation:spin .5s linear infinite;}
 .loader-bg.done {animation:spin-done .8s linear forwards;}
-@keyframes spin { 0% {transform:scale(0); opacity:1;} 100% {transform:scale(1); opacity:0;}}
-@keyframes spin-done { 0% {opacity:1;} 99% {opacity:0; transform: scale(1);} 100% {opacity:0; transform:scale(0);} }
+@keyframes spin {0% {transform:scale(0); opacity:1;} 100% {transform:scale(1); opacity:0;}}
+@keyframes spin-done {0% {opacity:1;} 99% {opacity:0; transform:scale(1);} 100% {opacity:0; transform:scale(0);}}
 </style>
