pages/index: Fix width of menu links
Signed-off-by: Kim In Seop <opnayn@gmail.com>

--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -82,13 +82,15 @@ body {
   width: 320px;
 }
 
-.main-page .menu .button {
+.main-page .menu .link {
   display: block;
-  margin: 6px;
+  margin: 6px 0;
   border: 2px solid #000;
   border-radius: 8px;
   padding: 8px;
   width: 100%;
+  box-sizing: border-box;
 
   font-size: 1.4em;
+  text-align: center;
 }
