templates: Add BlogLayout and parts
- organisms: Add BlogHeader
- pages/blog: Use BlogLayout
- templates/BlogPost: Use BlogLayout

Signed-off-by: Kim In Seop <opnayn@gmail.com>

--- a/src/templates/BlogPost/styles.css
+++ b/src/templates/BlogPost/styles.css
@@ -1,12 +1,5 @@
-.post {
-  margin: 0 auto;
-  width: 768px;
-}
-
-@media (max-width: 800px) {
-  .post {
-    width: 100%;
-  }
+.layout.post > .blog-header {
+  margin: 0 0 16px;
 }
 
 .post .card {
