atoms/Layout: Update prism code style

--- a/src/components/atoms/Layout/prism.css
+++ b/src/components/atoms/Layout/prism.css
@@ -44,9 +44,13 @@ pre[class*='language-'] {
 
 /* Inline code */
 :not(pre) > code[class*='language-'] {
-  padding: 0.1em;
+  display: inline-block;
+  margin: 0 0.2em;
+  padding: 0.08em 0.4em;
   border-radius: 0.3em;
+  font-size: 0.8em;
   white-space: normal;
+  vertical-align: middle;
 }
 
 .token.comment,
